<!--
  Licensed to the Apache Software Foundation (ASF) under one or more
  contributor license agreements.  See the NOTICE file distributed with
  this work for additional information regarding copyright ownership.
  The ASF licenses this file to You under the Apache License, Version 2.0
  (the "License"); you may not use this file except in compliance with
  the License.  You may obtain a copy of the License at
      http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.apache.teaclave.javasdk.test</groupId>
    <parent>
        <groupId>org.apache.teaclave.javasdk</groupId>
        <artifactId>test</artifactId>
        <version>0.1.0</version>
    </parent>
    <artifactId>enclave</artifactId>
    <packaging>jar</packaging>
    <name>Test-Enclave</name>
    <url></url>
    <properties>
        <svm.maven.version>0.11.2</svm.maven.version>
        <org.apache.teaclave.javasdk.enclave.privatePem.path></org.apache.teaclave.javasdk.enclave.privatePem.path>
    </properties>
    <profiles>
        <profile>
            <id>native</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.graalvm.buildtools</groupId>
                        <artifactId>native-maven-plugin</artifactId>
                        <version>${svm.maven.version}</version>
                        <extensions>true</extensions>
                        <executions>
                            <execution>
                                <id>test-native</id>
                                <goals>
                                    <goal>test</goal>
                                </goals>
                                <configuration>
                                    <buildArgs>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>-H:+RunInEnclave</buildArg>
                                        <buildArg>-H:NativeLinkerOption=/opt/javaenclave/bin/platform/tee_sdk_svm/generate_attestation_report.o</buildArg>
                                        <buildArg>-H:NativeLinkerOption=/opt/javaenclave/bin/platform/tee_sdk_svm/sgx_mmap.o</buildArg>
                                        <buildArg>-H:NativeLinkerOption=/opt/javaenclave/bin/platform/tee_sdk_svm/tee_sdk_enclave_t.o</buildArg>
                                        <buildArg>-H:NativeLinkerOption=/opt/javaenclave/bin/platform/tee_sdk_svm/tee_sdk_symbol.o</buildArg>
                                        <buildArg>-H:NativeLinkerOption=/opt/javaenclave/bin/platform/tee_sdk_svm/tee_sdk_wrapper.o</buildArg>
                                        <buildArg>-H:NativeLinkerOption=${project.build.directory}/xattr_stubs.o</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-L/opt/teesdk/sgxsdk/lib64</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-nostdlib</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-nodefaultlibs</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-nostartfiles</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,-z,relro,-z,now,-z,noexecstack</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,--whole-archive</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-lsgx_trts</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,--no-whole-archive</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,--start-group</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-lsgx_tstdc</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-lsgx_tstdc_ex</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-lsgx_tcxx</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-lsgx_pthread</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-lsgx_tcrypto</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-lsgx_tservice</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,--end-group</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,-Bstatic</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,-Bsymbolic</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,--no-undefined</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,-pie,-eenclave_entry</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,--export-dynamic</buildArg>
                                        <buildArg>-H:NativeLinkerOption=-Wl,--defsym,__ImageBase=0</buildArg>
                                    </buildArgs>
                                </configuration>
                                <phase>test</phase>
                            </execution>
                            <execution>
                                <id>build-native</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <configuration>
                                    <imageName>lib_mock_svm_load</imageName>
                                    <buildArgs>
                                        <buildArg>--shared</buildArg>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>-H:Path=${project.build.directory}/svm-output</buildArg>
                                        <buildArg>-o ${project.build.directory}/svm-output/lib_mock_svm_load</buildArg>
                                        <buildArg>-H:NativeLinkerOption=${project.build.directory}/mock_tcs_stubs.o</buildArg>
                                    </buildArgs>
                                </configuration>
                                <phase>package</phase>
                            </execution>
                            <execution>
                                <id>build-native-tee</id>
                                <goals>
                                    <goal>build</goal>
                                </goals>
                                <configuration>
                                    <imageName>lib_tee_sdk_svm_load</imageName>
                                    <buildArgs>
                                        <buildArg>--shared</buildArg>
                                        <buildArg>--no-fallback</buildArg>
                                        <buildArg>-H:-AllowVMInternalThreads</buildArg>
                                        <buildArg>-H:+RunInEnclave</buildArg>
                                        <buildArg>-H:+TraceSecurityServices</buildArg>
                                        <buildArg>-H:Path=${project.build.directory}/svm-output</buildArg>
                                        <buildArg>-o ${project.build.directory}/svm-output/lib_tee_sdk_svm_load</buildArg>
                                    </buildArgs>
                                </configuration>
                                <phase>package</phase>
                            </execution>
                        </executions>
                        <configuration>
                            <agent>
                                <enabled>true</enabled>
                            </agent>
                        </configuration>
                    </plugin>
                    <plugin>
                        <artifactId>exec-maven-plugin</artifactId>
                        <groupId>org.codehaus.mojo</groupId>
                        <executions>
                            <execution>
                                <id>CompileXattrStubs</id>
                                <phase>generate-test-sources</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>gcc</executable>
                                    <arguments>
                                        <argument>-c</argument>
                                        <argument>-fPIC</argument>
                                        <argument>-ffunction-sections</argument>
                                        <argument>-fdata-sections</argument>
                                        <argument>-fvisibility=hidden</argument>
                                        <argument>-o</argument>
                                        <argument>${project.build.directory}/xattr_stubs.o</argument>
                                        <argument>${project.basedir}/src/main/native/xattr_stubs.c</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>CompileMockTcsStubs</id>
                                <phase>generate-test-sources</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>gcc</executable>
                                    <arguments>
                                        <argument>-c</argument>
                                        <argument>-fPIC</argument>
                                        <argument>-o</argument>
                                        <argument>${project.build.directory}/mock_tcs_stubs.o</argument>
                                        <argument>/opt/javaenclave/stubs/mock_tcs_stubs.c</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                            <execution>
                                <id>ApplicationNativeCompile</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>bash</executable>
                                    <arguments>
                                        <argument>/opt/javaenclave/build_app/make.sh</argument>
                                        <argument>${project.basedir}</argument>
                                        <argument>${org.apache.teaclave.javasdk.platform}</argument>
                                        <argument>${org.apache.teaclave.javasdk.enclave.privatePem.path}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <compilerArgs>
                        <arg>--add-modules</arg>
                        <arg>jdk.internal.vm.compiler,jdk.crypto.ec</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.crypto.ec/sun.security.ec=ALL-UNNAMED</arg>
                        <arg>--add-exports</arg>
                        <arg>jdk.internal.vm.compiler/org.graalvm.compiler.options=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <attach>true</attach>
                </configuration>
                <executions>
                    <execution>
                        <phase>compile</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.3.0</version>
                <configuration>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.apache.teaclave.javasdk.test</groupId>
            <artifactId>common</artifactId>
        </dependency>
        <dependency>
            <groupId>org.apache.teaclave.javasdk</groupId>
            <artifactId>enclave</artifactId>
            <scope>compile</scope>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.apache.teaclave.javasdk.thirdpartylibs</groupId>
            <artifactId>bouncycastle-native</artifactId>
        </dependency>
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
        </dependency>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service-annotations</artifactId>
            <version>1.0-rc6</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.auto.service</groupId>
            <artifactId>auto-service</artifactId>
            <version>1.0-rc6</version>
            <optional>true</optional>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-launcher</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit-pioneer</groupId>
            <artifactId>junit-pioneer</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
